--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,12 @@ html {
   font-size: 62.5%;
 }
 
+input,
+button,
+select {
+  outline: none;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
