add:添加及时通话首页

--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body {
+  background-color: #d8dee9;
+}
